# actix-lapin-example

./: .env.tmp  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
src/: configs.rs  lib.rs  main.rs  prelude.rs
src/api/: base.rs  mod.rs  ping.rs  schemas.rs
src/errors/: api.rs  mod.rs  rmq.rs
src/rmq/: builder.rs  handler.rs  handlers.rs  schemas.rs
