[package]
name = "actix-lapin"
version = "0.2.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.13.0"
chrono = "0.4.44"
dotenvy = "0.15.7"
env_logger = "0.11.10"
envconfig = "0.11.1"
lapin = "4.7.0"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
